// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppX 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;

exports[`application id 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;

exports[`auto launch 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;

exports[`certificateSubjectName 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;

exports[`custom raw appmanifest.xml 1`] = `
"<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<Package xmlns="http://schemas.microsoft.com/appx/manifest/foundation/windows10" xmlns:uap="http://schemas.microsoft.com/appx/manifest/uap/windows10" xmlns:desktop="http://schemas.microsoft.com/appx/manifest/desktop/windows10" xmlns:rescap="http://schemas.microsoft.com/appx/manifest/foundation/windows10/restrictedcapabilities" xmlns:desktop2="http://schemas.microsoft.com/appx/manifest/desktop/windows10/2">
  <Identity Name="IonutStoica.ContainerDesktop" ProcessorArchitecture="x64" Publisher="CN=52408AA8-2ECC-4E48-9A2C-6C1F69841C79" Version="5.2.13.0"/>
  <Properties>
    <DisplayName>Container Desktop</DisplayName>
    <PublisherDisplayName>Ionut.Stoica</PublisherDisplayName>
    <Description>Container Desktop</Description>
    <Logo>assets\\StoreLogo.png</Logo>
  </Properties>
  <Resources>
    <Resource Language="en-US"/>
  </Resources>
  <Dependencies>
    <TargetDeviceFamily Name="Windows.Desktop" MinVersion="10.0.18362.0" MaxVersionTested="10.0.18362.0"/>
  </Dependencies>
  <Capabilities>
    <Capability Name="internetClient"/>
    <Capability Name="privateNetworkClientServer"/>
    <rescap:Capability Name="runFullTrust"/>
  </Capabilities>
  <Applications>
    <Application Id="IonutStoica.ContainerDesktop" Executable="app\\Container Desktop.exe" EntryPoint="Windows.FullTrustApplication">
      <uap:VisualElements BackgroundColor="#464646" DisplayName="Container Desktop" Square150x150Logo="assets\\Square150x150Logo.png" Square44x44Logo="assets\\Square44x44Logo.png" Description="Container Desktop">
        <uap:DefaultTile Wide310x150Logo="assets\\Wide310x150Logo.png" Square310x310Logo="assets\\LargeTile.png" Square71x71Logo="assets\\SmallTile.png"/>
      </uap:VisualElements>
    </Application>
  </Applications>
  <Extensions>
    <desktop2:Extension Category="windows.firewallRules">
      <desktop2:FirewallRules Executable="app\\bin\\container-desktop-ssh-relay.exe">
        <desktop2:Rule Direction="in" Profile="private" IPProtocol="TCP" LocalPortMin="22022" LocalPortMax="24044"/>
      </desktop2:FirewallRules>
    </desktop2:Extension>
  </Extensions>
</Package>"
`;

exports[`custom template appmanifest.xml 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<!--suppress XmlUnusedNamespaceDeclaration -->
<Package
   xmlns="http://schemas.microsoft.com/appx/manifest/foundation/windows10"
   xmlns:uap="http://schemas.microsoft.com/appx/manifest/uap/windows10"
   xmlns:desktop="http://schemas.microsoft.com/appx/manifest/desktop/windows10"
   xmlns:rescap="http://schemas.microsoft.com/appx/manifest/foundation/windows10/restrictedcapabilities">
  <!-- use single quotes to avoid double quotes escaping in the publisher value  -->
  <Identity Name="TestApp"
    ProcessorArchitecture="x64"
    Publisher='CN=ms'
    Version="1.1.0.0" />
  <Properties>
    <DisplayName>Test App ßW</DisplayName>
    <PublisherDisplayName>Foo Bar</PublisherDisplayName>
    <Description>Test Application (test quite “ #378)</Description>
    <Logo>assets\\StoreLogo.png</Logo>
  </Properties>
  <Resources>
    <Resource Language="en-US"/>
  </Resources>
  <Dependencies>
    <TargetDeviceFamily Name="Windows.Desktop" MinVersion="10.0.18362.0" MaxVersionTested="10.0.18362.0"/>
  </Dependencies>
  <Applications>
    <Application Id="TestApp" Executable="app\\Test App ßW.exe" EntryPoint="Windows.FullTrustApplication">
      <uap:VisualElements
       BackgroundColor="#464646"
       DisplayName="Test App ßW"
       Square150x150Logo="assets\\Square150x150Logo.png"
       Square44x44Logo="assets\\Square44x44Logo.png"
       Description="Test Application (test quite “ #378)">
        
        <uap:DefaultTile Wide310x150Logo="assets\\Wide310x150Logo.png" />
        
      </uap:VisualElements>
      
    </Application>
  </Applications>
</Package>
"
`;

exports[`languages and not signed (windows store only) 1`] = `
{
  "win": [
    {
      "arch": "ia32",
      "file": "Test App ßW 1.1.0 ia32.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;
